--- a/ui/src/app/components/discussion-card/discussion-card.component.scss
+++ b/ui/src/app/components/discussion-card/discussion-card.component.scss
@@ -12,11 +12,7 @@
   margin-bottom: 10px;
 }
 
-.vote-number {
-  font-size: 16px;
-}
-
-.vote-thumb {
+.vote-number, .vote-thumb {
   font-size: 16px;
 }
 
