--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 
-@import './app/styles/bootstrap';
+@import "../node_modules/bootswatch/dist/cyborg/bootstrap.min.css";
 @import './app/styles/extras';
 @import './app/styles/slider';
 @import '../node_modules/angular2-toaster/toaster.css';
