--- a/ui/src/app/components/community/community.component.html
+++ b/ui/src/app/components/community/community.component.html
@@ -9,6 +9,13 @@
     </div>
   </div>
   <div *ngIf="!editing">
+
+    <div class="row">
+      <div class="col-12">
+        <app-status-update *ngIf="community" [community]="community"></app-status-update>
+      </div>
+    </div>
+
     <div (window:scroll)="onScroll($event)">
       <div *ngIf="!isCard()" class="list-group">
         <app-discussion-card *ngFor="let discussion of discussions" [discussion]="discussion "></app-discussion-card>
